crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_rmsnorm_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"rmsnorm\", size_class: \"medium\", shape: vec![128], output: out, }"
---
KernelSnapshot {
    kernel: "rmsnorm",
    size_class: "medium",
    shape: [
        128,
    ],
    output: [
        0.166678,
        0.251712,
        0.47747,
        0.675074,
        0.035616,
        0.016799,
        0.727318,
        1.280173,
        0.229035,
        0.026498,
        0.573865,
        0.014317,
        0.041857,
        0.303925,
        1.102362,
        0.742356,
        0.005355,
        1.145913,
        0.656443,
        0.944962,
        0.864284,
        0.042997,
        1.058198,
        0.279421,
        0.306736,
        0.751644,
        0.260632,
        1.237368,
        0.255237,
        0.524592,
        0.111449,
        0.053708,
        0.109776,
        1.011581,
        0.090934,
        0.082935,
        0.969389,
        0.593438,
        0.373113,
        0.718526,
        0.507811,
        0.295135,
        0.8119,
        0.129188,
        0.22745,
        0.829482,
        0.747766,
        1.605892,
        0.178845,
        0.147293,
        0.865608,
        0.253517,
        0.042318,
        0.769006,
        0.668875,
        0.066259,
        1.222835,
        0.524317,
        0.655057,
        0.752644,
        0.027155,
        0.047943,
        0.023971,
        0.144341,
        0.15598,
        0.268382,
        0.371746,
        1.045703,
        0.332718,
        0.55275,
        0.012077,
        0.004298,
        0.70873,
        0.229206,
        0.106719,
        0.97395,
        0.041906,
        1.153803,
        0.04884,
        0.543761,
        1.02605,
        0.455249,
        0.251717,
        0.046462,
        0.28688,
        0.260628,
        0.020768,
        0.649473,
        0.125241,
        0.523391,
        0.032192,
        0.916511,
        0.053524,
        0.21245,
        0.319764,
        0.103866,
        0.026594,
        1.258406,
        0.549992,
        0.021072,
        0.284021,
        0.45247,
        0.20893,
        0.005055,
        0.085129,
        0.067106,
        0.245316,
        0.365844,
        0.101766,
        0.023598,
        0.351256,
        0.889628,
        0.797268,
        0.96767,
        0.005162,
        0.558597,
        0.148721,
        0.527724,
        0.178263,
        0.41726,
        0.450788,
        0.540225,
        0.215214,
        0.363175,
        0.396297,
        0.117567,
        1.218722,
        0.212281,
    ],
}
