crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_silu_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"silu\", size_class: \"medium\", shape: vec![256], output: out, }"
---
KernelSnapshot {
    kernel: "silu",
    size_class: "medium",
    shape: [
        256,
    ],
    output: [
        -0.071396,
        -0.158362,
        -0.229797,
        -0.160224,
        -0.260126,
        -0.022141,
        -0.26773,
        -0.266382,
        -0.25614,
        -0.222325,
        -0.103401,
        -0.006375,
        -0.018741,
        -0.180414,
        -0.238659,
        -0.144139,
        -0.259103,
        -0.1013,
        -0.227156,
        -0.145622,
        -0.154122,
        -0.043317,
        -0.256454,
        -0.041763,
        -0.036923,
        -0.179217,
        -0.264176,
        -0.252301,
        -0.198993,
        -0.236982,
        -0.024603,
        -0.228295,
        -0.066673,
        -0.027146,
        -0.196965,
        -0.002426,
        -0.11316,
        -0.254633,
        -0.176752,
        -0.247775,
        -0.261666,
        -0.265816,
        -0.044084,
        -0.246864,
        -0.12517,
        -0.159787,
        -0.165971,
        -0.267317,
        -0.264783,
        -0.134618,
        -0.24715,
        -0.262247,
        -0.268067,
        -0.086655,
        -0.029512,
        -0.263138,
        -0.251011,
        -0.093314,
        -0.266226,
        -0.02209,
        -0.250956,
        -0.12227,
        -0.237268,
        -0.262293,
        -0.12031,
        -0.147005,
        -0.107142,
        -0.055754,
        -0.066069,
        -0.06936,
        -0.087129,
        -0.245717,
        -0.106068,
        -0.169206,
        -0.034999,
        -0.095398,
        -0.246002,
        -0.236035,
        -0.158275,
        -0.212974,
        -0.2676,
        -0.10311,
        -0.165628,
        -0.012401,
        -0.219252,
        -0.125088,
        -0.19682,
        -0.250667,
        -0.070997,
        -0.227588,
        -0.26032,
        -0.065551,
        -0.254171,
        -0.163029,
        -0.060034,
        -0.040288,
        -0.185759,
        -0.025091,
        -0.263607,
        -0.142573,
        -0.207026,
        -0.197549,
        -0.152883,
        -0.075333,
        -0.250794,
        -0.06803,
        -0.060752,
        -0.26373,
        -0.208913,
        -0.260028,
        -0.010919,
        -0.252213,
        -0.186879,
        -0.239582,
        -0.079949,
        -0.040681,
        -0.251342,
        -0.244869,
        -0.215727,
        -0.151719,
        -0.237025,
        -0.258607,
        -0.262494,
        -0.028746,
        -0.252456,
        -0.209508,
        -0.001136,
        -0.171685,
        -0.246768,
        -0.113697,
        -0.133377,
        -0.194731,
        -0.183088,
        -0.196916,
        -0.174098,
        -0.237622,
        -0.019951,
        -0.103591,
        -0.234954,
        -0.108129,
        -0.183365,
        -0.255658,
        -0.159484,
        -0.018443,
        -0.261003,
        -0.252021,
        -0.119148,
        -0.205073,
        -0.241872,
        -0.257114,
        -0.054787,
        -0.08418,
        -0.261862,
        -0.232634,
        -0.004388,
        -0.248066,
        -0.266743,
        -0.054682,
        -0.244092,
        -0.098418,
        -0.268487,
        -0.019626,
        -0.199056,
        -0.068482,
        -0.228075,
        -0.168604,
        -0.18222,
        -0.014064,
        -0.180128,
        -0.187459,
        -0.261864,
        -0.2474,
        -0.241457,
        -0.228832,
        -0.247926,
        -0.056466,
        -0.255322,
        -0.204701,
        -0.227106,
        -0.258728,
        -0.12282,
        -0.150665,
        -0.174017,
        -0.148475,
        -0.193944,
        -0.09686,
        -0.035859,
        -0.245397,
        -0.268069,
        -0.246295,
        -0.144121,
        -0.178821,
        -0.002599,
        -0.229733,
        -0.188221,
        -0.200979,
        -0.131947,
        -0.13147,
        -0.064718,
        -0.08752,
        -0.09892,
        -0.265344,
        -0.260441,
        -0.076504,
        -0.135213,
        -0.244502,
        -0.172085,
        -0.230438,
        -0.100964,
        -0.062965,
        -0.261979,
        -0.264899,
        -0.000324,
        -0.173353,
        -0.236636,
        -0.184252,
        -0.192211,
        -0.110476,
        -0.235882,
        -0.140499,
        -0.267828,
        -0.259254,
        -0.255962,
        -0.207997,
        -0.230904,
        -0.190969,
        -0.000224,
        -0.266197,
        -0.132025,
        -0.252171,
        -0.240105,
        -0.232234,
        -0.066701,
        -0.142161,
        -0.198919,
        -0.130325,
        -0.227294,
        -0.247266,
        -0.147663,
        -0.069972,
        -0.250113,
        -0.094487,
        -0.263103,
        -0.175366,
        -0.204206,
        -0.168262,
        -0.247991,
        -0.028036,
        -0.253546,
        -0.159592,
        -0.12398,
        -0.267679,
        -0.234237,
        -0.124437,
        -0.017184,
        -0.243763,
    ],
}
