crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_softmax_large.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"softmax\", size_class: \"large\", shape: vec![1024], output: out, }"
---
KernelSnapshot {
    kernel: "softmax",
    size_class: "large",
    shape: [
        1024,
    ],
    output: [
        0.001145,
        0.001259,
        0.001111,
        0.001212,
        0.001149,
        0.001356,
        0.00152,
        0.001141,
        0.000692,
        0.000768,
        0.00065,
        0.000711,
        0.000702,
        0.001186,
        0.001097,
        0.000879,
        0.000669,
        0.000643,
        0.001169,
        0.001178,
        0.000597,
        0.000693,
        0.001241,
        0.001017,
        0.000618,
        0.000835,
        0.001275,
        0.001293,
        0.000739,
        0.000679,
        0.000627,
        0.001059,
        0.001041,
        0.000657,
        0.001394,
        0.001124,
        0.000975,
        0.001072,
        0.000615,
        0.000768,
        0.001141,
        0.001503,
        0.000885,
        0.001281,
        0.00107,
        0.001382,
        0.000954,
        0.000627,
        0.001077,
        0.000767,
        0.001304,
        0.000601,
        0.001284,
        0.000965,
        0.001302,
        0.000898,
        0.00067,
        0.000675,
        0.000645,
        0.000582,
        0.001139,
        0.001424,
        0.000924,
        0.001507,
        0.000682,
        0.001,
        0.00145,
        0.000918,
        0.00146,
        0.00117,
        0.000975,
        0.001335,
        0.000708,
        0.001421,
        0.001345,
        0.000845,
        0.001108,
        0.000713,
        0.001381,
        0.000587,
        0.001545,
        0.0011,
        0.000695,
        0.001175,
        0.001441,
        0.001144,
        0.001007,
        0.000683,
        0.00149,
        0.001061,
        0.000879,
        0.000966,
        0.00118,
        0.000715,
        0.000648,
        0.001028,
        0.000972,
        0.000996,
        0.001236,
        0.001327,
        0.000599,
        0.000655,
        0.001086,
        0.00096,
        0.00096,
        0.000899,
        0.00111,
        0.001066,
        0.00115,
        0.00082,
        0.000624,
        0.001349,
        0.001524,
        0.001081,
        0.00123,
        0.000735,
        0.00109,
        0.001109,
        0.000655,
        0.000634,
        0.001249,
        0.000792,
        0.000732,
        0.000717,
        0.001173,
        0.000824,
        0.001489,
        0.001293,
        0.001316,
        0.000668,
        0.001383,
        0.000852,
        0.000858,
        0.001198,
        0.001216,
        0.001452,
        0.001094,
        0.000659,
        0.000697,
        0.001144,
        0.000732,
        0.000934,
        0.000827,
        0.001086,
        0.001039,
        0.001317,
        0.000817,
        0.00134,
        0.001397,
        0.001069,
        0.00099,
        0.000591,
        0.000741,
        0.00113,
        0.001464,
        0.000825,
        0.000958,
        0.00092,
        0.000918,
        0.000822,
        0.000666,
        0.000889,
        0.000627,
        0.000627,
        0.001375,
        0.001504,
        0.000616,
        0.001067,
        0.00061,
        0.001092,
        0.000685,
        0.000889,
        0.000725,
        0.001505,
        0.001008,
        0.000738,
        0.000648,
        0.001086,
        0.001051,
        0.000853,
        0.001056,
        0.000691,
        0.001424,
        0.001444,
        0.001353,
        0.001084,
        0.001177,
        0.000866,
        0.001021,
        0.000607,
        0.000599,
        0.000647,
        0.001333,
        0.00087,
        0.000991,
        0.001556,
        0.000828,
        0.000796,
        0.001383,
        0.001345,
        0.000902,
        0.001458,
        0.000789,
        0.000753,
        0.001509,
        0.000627,
        0.000966,
        0.000729,
        0.001211,
        0.000753,
        0.000978,
        0.000821,
        0.001428,
        0.000801,
        0.000675,
        0.000686,
        0.001525,
        0.001196,
        0.000658,
        0.001512,
        0.00118,
        0.000931,
        0.000908,
        0.001283,
        0.001069,
        0.000943,
        0.00086,
        0.000735,
        0.000633,
        0.000754,
        0.000829,
        0.000595,
        0.000991,
        0.001281,
        0.000897,
        0.00144,
        0.001359,
        0.001008,
        0.000783,
        0.00136,
        0.001207,
        0.000913,
        0.001166,
        0.000715,
        0.001376,
        0.000795,
        0.000864,
        0.001009,
        0.000791,
        0.001419,
        0.001145,
        0.001413,
        0.000671,
        0.001176,
        0.000886,
        0.000592,
        0.001199,
        0.000714,
        0.000629,
        0.001047,
        0.001111,
        0.001498,
        0.001544,
        0.000687,
        0.001252,
        0.000655,
        0.001109,
        0.000901,
        0.000903,
        0.000937,
        0.001145,
        0.000932,
        0.001457,
        0.000687,
        0.000764,
        0.000592,
        0.001465,
        0.000801,
        0.001128,
        0.00071,
        0.000808,
        0.000985,
        0.00084,
        0.000925,
        0.000752,
        0.000931,
        0.00067,
        0.000602,
        0.000576,
        0.001064,
        0.000689,
        0.000897,
        0.001119,
        0.0013,
        0.000622,
        0.000852,
        0.000686,
        0.001196,
        0.000615,
        0.001228,
        0.000749,
        0.000788,
        0.000852,
        0.000639,
        0.001278,
        0.000643,
        0.00066,
        0.000589,
        0.001141,
        0.001008,
        0.001095,
        0.001467,
        0.000828,
        0.000983,
        0.000591,
        0.000724,
        0.000703,
        0.0009,
        0.000582,
        0.000661,
        0.000919,
        0.001224,
        0.001423,
        0.000914,
        0.000622,
        0.00086,
        0.000599,
        0.000955,
        0.000627,
        0.0012,
        0.001206,
        0.001394,
        0.000766,
        0.000727,
        0.001553,
        0.001472,
        0.000732,
        0.001064,
        0.000819,
        0.00058,
        0.001108,
        0.001554,
        0.000899,
        0.000741,
        0.001277,
        0.001201,
        0.000653,
        0.001085,
        0.001267,
        0.001074,
        0.001222,
        0.000601,
        0.000966,
        0.000901,
        0.000679,
        0.000697,
        0.000973,
        0.000657,
        0.001443,
        0.000662,
        0.001096,
        0.001174,
        0.000696,
        0.000603,
        0.001108,
        0.001383,
        0.001521,
        0.000817,
        0.000753,
        0.001272,
        0.000645,
        0.000825,
        0.00085,
        0.001064,
        0.000577,
        0.000607,
        0.000924,
        0.000672,
        0.001235,
        0.000832,
        0.001269,
        0.000808,
        0.000646,
        0.000773,
        0.000608,
        0.000619,
        0.001208,
        0.000589,
        0.000598,
        0.001394,
        0.000993,
        0.000815,
        0.001416,
        0.000986,
        0.001066,
        0.00068,
        0.000589,
        0.001495,
        0.000986,
        0.000803,
        0.000817,
        0.000685,
        0.001163,
        0.001461,
        0.001006,
        0.000642,
        0.001228,
        0.001294,
        0.001137,
        0.001389,
        0.001298,
        0.00061,
        0.001036,
        0.00101,
        0.001351,
        0.000958,
        0.000676,
        0.001081,
        0.001523,
        0.001306,
        0.001033,
        0.000765,
        0.001129,
        0.000613,
        0.000959,
        0.00058,
        0.001041,
        0.001515,
        0.001187,
        0.001062,
        0.000832,
        0.001389,
        0.000712,
        0.000716,
        0.001506,
        0.000622,
        0.000785,
        0.000938,
        0.00128,
        0.000894,
        0.001315,
        0.000732,
        0.000672,
        0.001322,
        0.001128,
        0.000689,
        0.001118,
        0.001424,
        0.000721,
        0.001344,
        0.001157,
        0.000895,
        0.001056,
        0.00109,
        0.001097,
        0.001553,
        0.001149,
        0.001261,
        0.000897,
        0.00081,
        0.000898,
        0.001279,
        0.000629,
        0.00068,
        0.00154,
        0.000781,
        0.001447,
        0.000716,
        0.000827,
        0.001509,
        0.00085,
        0.001115,
        0.00148,
        0.000583,
        0.000613,
        0.001367,
        0.000712,
        0.000619,
        0.000603,
        0.000708,
        0.001549,
        0.000632,
        0.001095,
        0.001367,
        0.000983,
        0.000599,
        0.000642,
        0.001,
        0.001393,
        0.000586,
        0.001363,
        0.00119,
        0.000987,
        0.00132,
        0.001232,
        0.000883,
        0.000914,
        0.000924,
        0.001176,
        0.000579,
        0.000878,
        0.001119,
        0.001438,
        0.001168,
        0.000858,
        0.000593,
        0.000719,
        0.000791,
        0.001399,
        0.000834,
        0.000997,
        0.000669,
        0.000858,
        0.000758,
        0.00115,
        0.000859,
        0.001261,
        0.000638,
        0.000709,
        0.001027,
        0.00064,
        0.000743,
        0.00101,
        0.001103,
        0.000867,
        0.001073,
        0.001485,
        0.001222,
        0.000641,
        0.000787,
        0.000576,
        0.000664,
        0.001074,
        0.000807,
        0.000588,
        0.001124,
        0.000665,
        0.00083,
        0.001514,
        0.001089,
        0.001435,
        0.00074,
        0.000645,
        0.000824,
        0.00075,
        0.001102,
        0.001049,
        0.001159,
        0.00074,
        0.000619,
        0.000807,
        0.000716,
        0.000902,
        0.00133,
        0.001372,
        0.00081,
        0.001066,
        0.001144,
        0.000682,
        0.001122,
        0.00059,
        0.001288,
        0.000756,
        0.000747,
        0.00098,
        0.00072,
        0.000847,
        0.000987,
        0.00128,
        0.001088,
        0.00086,
        0.000688,
        0.001301,
        0.001523,
        0.000834,
        0.000719,
        0.001505,
        0.001024,
        0.001196,
        0.001293,
        0.001106,
        0.001193,
        0.000752,
        0.000807,
        0.000961,
        0.001461,
        0.000634,
        0.000934,
        0.000836,
        0.001556,
        0.001092,
        0.000944,
        0.001206,
        0.001194,
        0.000772,
        0.000603,
        0.000616,
        0.001073,
        0.00069,
        0.000704,
        0.001009,
        0.001025,
        0.001486,
        0.000878,
        0.000575,
        0.000989,
        0.001253,
        0.001143,
        0.000778,
        0.001239,
        0.000749,
        0.000881,
        0.000754,
        0.001011,
        0.001323,
        0.000695,
        0.00118,
        0.001213,
        0.000906,
        0.001175,
        0.000634,
        0.00074,
        0.000659,
        0.001436,
        0.000576,
        0.000924,
        0.001263,
        0.001392,
        0.000814,
        0.000877,
        0.001051,
        0.00066,
        0.001053,
        0.000636,
        0.001137,
        0.001284,
        0.000985,
        0.000924,
        0.000843,
        0.000925,
        0.001045,
        0.000919,
        0.000629,
        0.001358,
        0.001217,
        0.000658,
        0.001342,
        0.001195,
        0.001055,
        0.000653,
        0.001424,
        0.00081,
        0.000868,
        0.001337,
        0.001108,
        0.001508,
        0.000653,
        0.001048,
        0.000676,
        0.001271,
        0.001499,
        0.001485,
        0.000768,
        0.001001,
        0.000667,
        0.000898,
        0.000899,
        0.000712,
        0.001374,
        0.001056,
        0.001214,
        0.000791,
        0.001131,
        0.00073,
        0.000737,
        0.00137,
        0.001036,
        0.000761,
        0.000601,
        0.000707,
        0.00063,
        0.001418,
        0.000598,
        0.000633,
        0.001239,
        0.001396,
        0.000776,
        0.001447,
        0.001055,
        0.000967,
        0.001095,
        0.000803,
        0.00109,
        0.000596,
        0.000942,
        0.001433,
        0.00123,
        0.001312,
        0.000801,
        0.001229,
        0.000687,
        0.00116,
        0.000747,
        0.000632,
        0.000706,
        0.001093,
        0.000721,
        0.00103,
        0.001252,
        0.000625,
        0.000605,
        0.001492,
        0.000971,
        0.001224,
        0.000909,
        0.000767,
        0.000811,
        0.000798,
        0.000787,
        0.000637,
        0.001139,
        0.001399,
        0.001056,
        0.000813,
        0.000984,
        0.001558,
        0.00059,
        0.000982,
        0.001161,
        0.000641,
        0.000878,
        0.000661,
        0.000749,
        0.001296,
        0.000993,
        0.001035,
        0.000674,
        0.000677,
        0.001411,
        0.0007,
        0.00124,
        0.000576,
        0.000802,
        0.00082,
        0.000634,
        0.000765,
        0.001023,
        0.001366,
        0.000829,
        0.001457,
        0.001228,
        0.00095,
        0.001044,
        0.000617,
        0.000739,
        0.000609,
        0.000892,
        0.000953,
        0.001348,
        0.001487,
        0.000793,
        0.001095,
        0.000655,
        0.000747,
        0.001049,
        0.001549,
        0.000613,
        0.001157,
        0.001095,
        0.000598,
        0.0006,
        0.001365,
        0.000997,
        0.00096,
        0.001483,
        0.000596,
        0.001176,
        0.000658,
        0.001422,
        0.000704,
        0.000758,
        0.000737,
        0.001003,
        0.001061,
        0.001449,
        0.000598,
        0.00144,
        0.000618,
        0.000838,
        0.001447,
        0.000619,
        0.000658,
        0.000884,
        0.000717,
        0.000904,
        0.000772,
        0.00149,
        0.001283,
        0.000827,
        0.000897,
        0.00096,
        0.000882,
        0.001056,
        0.000934,
        0.000633,
        0.001427,
        0.001112,
        0.000583,
        0.001398,
        0.001089,
        0.000594,
        0.000736,
        0.000844,
        0.000821,
        0.001435,
        0.000839,
        0.000687,
        0.00102,
        0.000928,
        0.000642,
        0.001425,
        0.001124,
        0.001132,
        0.000977,
        0.001019,
        0.000895,
        0.001139,
        0.000775,
        0.001083,
        0.00096,
        0.000901,
        0.001503,
        0.000776,
        0.000967,
        0.001304,
        0.001004,
        0.001197,
        0.001048,
        0.001063,
        0.000946,
        0.000992,
        0.000909,
        0.000913,
        0.00131,
        0.001113,
        0.000617,
        0.000694,
        0.000808,
        0.000784,
        0.000848,
        0.000625,
        0.000655,
        0.00067,
        0.000988,
        0.001531,
        0.001436,
        0.001295,
        0.000914,
        0.001376,
        0.001474,
        0.001475,
        0.000928,
        0.001396,
        0.000586,
        0.000593,
        0.001069,
        0.000668,
        0.000739,
        0.00076,
        0.000741,
        0.000727,
        0.000856,
        0.001373,
        0.001496,
        0.000816,
        0.000835,
        0.000806,
        0.00137,
        0.000701,
        0.000949,
        0.000722,
        0.000596,
        0.000904,
        0.001036,
        0.000816,
        0.00109,
        0.000686,
        0.001223,
        0.000779,
        0.000618,
        0.000722,
        0.000956,
        0.00114,
        0.000839,
        0.000615,
        0.000672,
        0.000744,
        0.000699,
        0.001457,
        0.000668,
        0.001288,
        0.001041,
        0.000846,
        0.000769,
        0.000802,
        0.001359,
        0.001367,
        0.000826,
        0.001155,
        0.000847,
        0.001396,
        0.000723,
        0.001183,
        0.001529,
        0.001001,
        0.000611,
        0.000684,
        0.001163,
        0.001089,
        0.001001,
        0.0009,
        0.000929,
        0.000747,
        0.000956,
        0.001487,
        0.00081,
        0.001389,
        0.001011,
        0.000917,
        0.000607,
        0.001526,
        0.001254,
        0.00146,
        0.00091,
        0.000626,
        0.001241,
        0.000595,
        0.00126,
        0.001003,
        0.001313,
        0.000708,
        0.001073,
        0.001366,
        0.001186,
        0.000827,
        0.000699,
        0.000623,
        0.000816,
        0.000968,
        0.00063,
        0.001308,
        0.0006,
        0.001296,
        0.000588,
        0.000592,
        0.001073,
        0.000896,
        0.001446,
        0.001148,
        0.000743,
        0.001018,
        0.000956,
        0.000677,
        0.000657,
        0.00079,
        0.001379,
        0.000675,
        0.000938,
        0.000798,
        0.001174,
        0.000949,
        0.000699,
        0.001127,
        0.000849,
        0.000584,
        0.000677,
        0.001531,
        0.00151,
        0.001032,
        0.000893,
        0.001163,
        0.000977,
        0.001165,
        0.001141,
        0.000749,
        0.000619,
        0.000729,
        0.001079,
        0.001103,
        0.00155,
        0.001521,
        0.001263,
        0.001161,
        0.000815,
        0.000713,
        0.001256,
        0.001313,
        0.000922,
        0.000729,
        0.000682,
        0.000834,
        0.000827,
        0.000924,
        0.001005,
        0.000952,
        0.000981,
        0.001245,
        0.001008,
        0.000724,
        0.000696,
        0.000925,
        0.00074,
        0.000684,
        0.000594,
        0.00104,
        0.0006,
        0.001391,
        0.000605,
        0.000749,
        0.000618,
        0.000583,
        0.000772,
        0.000917,
        0.001477,
    ],
}
