crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_softmax_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"softmax\", size_class: \"medium\", shape: vec![64], output: out, }"
---
KernelSnapshot {
    kernel: "softmax",
    size_class: "medium",
    shape: [
        64,
    ],
    output: [
        0.01343,
        0.013875,
        0.017629,
        0.020448,
        0.012611,
        0.023856,
        0.015656,
        0.02526,
        0.021797,
        0.016306,
        0.009625,
        0.009932,
        0.015155,
        0.015765,
        0.01305,
        0.022775,
        0.0121,
        0.01592,
        0.012854,
        0.023998,
        0.022415,
        0.024778,
        0.010415,
        0.010932,
        0.011289,
        0.009892,
        0.013966,
        0.011515,
        0.013676,
        0.022971,
        0.010468,
        0.009756,
        0.024216,
        0.020465,
        0.009716,
        0.011051,
        0.014513,
        0.025486,
        0.016621,
        0.010629,
        0.016356,
        0.013759,
        0.01831,
        0.016802,
        0.01655,
        0.021508,
        0.010641,
        0.009779,
        0.018641,
        0.015084,
        0.011169,
        0.020112,
        0.010873,
        0.015408,
        0.013422,
        0.012396,
        0.011669,
        0.013992,
        0.021558,
        0.014177,
        0.014373,
        0.010453,
        0.017029,
        0.019128,
    ],
}
