crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_ternary_dequant_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{\n    kernel: \"ternary_dequantize\", size_class: \"medium\", shape: vec![256],\n    output: deq,\n}"
---
KernelSnapshot {
    kernel: "ternary_dequantize",
    size_class: "medium",
    shape: [
        256,
    ],
    output: [
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        0.0,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        0.0,
        0.0,
        -0.42,
        -0.42,
        0.0,
        0.0,
        -0.42,
        0.0,
        0.0,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        0.0,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        0.0,
        0.0,
        -0.42,
        -0.42,
        0.0,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        -0.42,
        0.0,
    ],
}
