crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_ternary_quant_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "QuantSnapshot\n{\n    kernel: \"ternary_quantize\", size_class: \"medium\", shape: vec![256],\n    quantized: q,\n}"
---
QuantSnapshot {
    kernel: "ternary_quantize",
    size_class: "medium",
    shape: [
        256,
    ],
    quantized: [
        0,
        -1,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        0,
        0,
        -1,
        -1,
        0,
        0,
        0,
        0,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        0,
        0,
        -1,
        0,
        -1,
        0,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        0,
        -1,
        0,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        -1,
        0,
        0,
        -1,
        0,
        -1,
        0,
        0,
        -1,
        0,
        -1,
        0,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        0,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        0,
        0,
        -1,
        0,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        0,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        0,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        0,
        -1,
        -1,
        0,
    ],
}
